PingPong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwk-2020-pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwk-2020-pingpong
  template:
    metadata:
      labels:
        app: dwk-2020-pingpong
    spec:
      containers:
        - name: dwk-2020-pingpong
          image: shomarov/dwk-2020-pingpong:latest
