PingPong/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-2020-exercises
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Exact
            backend:
              service:
                name: dwk-2020-pingpong-svc
                port:
                  number: 2347
          - path: /status
            pathType: Exact
            backend:
              service:
                name: dwk-2020-main-svc
                port:
                  number: 2346
